@@ -17,73 +17,56 @@ import org.springframework.web.bind.annotation.*;
 
 import org.springframework.web.server.ResponseStatusException;
 
-@Controller
+
 @RequestMapping("/question")
 @RequiredArgsConstructor
+@Controller
 public class QuestionController {
 
     private final QuestionService questionService;
     private final UserService userService;
 
     @GetMapping("/list")
-    public String list(Model model, @RequestParam(defaultValue = "0") int page, String kw) {
-        Page<Question> paging = questionService.getList(page);
-
+    public String list(Model model, @RequestParam(value="page", defaultValue="0") int page) {
+        Page<Question> paging = this.questionService.getList(page);
         model.addAttribute("paging", paging);
-
         return "question_list";
     }
 
-    @GetMapping("/detail/{id}")
+    @GetMapping(value = "/detail/{id}")
     public String detail(Model model, @PathVariable("id") Integer id, AnswerForm answerForm) {
-        Question question = questionService.getQuestion(id);
-
+        Question question = this.questionService.getQuestion(id);
         model.addAttribute("question", question);
-
         return "question_detail";
     }
 
     @PreAuthorize("isAuthenticated()")
     @GetMapping("/create")
-    // questionForm 변수는 model.addAttribute 없이 바로 뷰에서 접근할 수 있다.
-    // QuestionForm questionForm 써주는 이유, question_form.html 에서 questionForm 변수가 없으면 실행이 안되기 때문에
-    // 빈 객체라도 만든다.
-    public String questionCreate(Model model) {
-        model.addAttribute("questionForm", new QuestionForm());
+    public String questionCreate(QuestionForm questionForm) {
         return "question_form";
     }
 
     @PreAuthorize("isAuthenticated()")
     @PostMapping("/create")
-    // @Valid QuestionForm questionForm
-    // questionForm 값을 바인딩 할 때 유효성 체크를 해라!
-    // questionForm 변수와 bindingResult 변수는 model.addAttribute 없이 바로 뷰에서 접근할 수 있다.
-    public String questionCreate(@Valid QuestionForm questionForm, BindingResult bindingResult, Principal principal) {
+    public String questionCreate(@Valid QuestionForm questionForm,
+                                 BindingResult bindingResult, Principal principal) {
         if (bindingResult.hasErrors()) {
-            // question_form.html 실행
-            // 다시 작성하라는 의미로 응답에 폼을 실어서 보냄
             return "question_form";
         }
-
-        SiteUser siteUser = userService.getUser(principal.getName());
-
-        questionService.create(questionForm.getSubject(), questionForm.getContent(), siteUser);
-
-        return "redirect:/question/list"; // 질문 저장후 질문목록으로 이동
+        SiteUser siteUser = this.userService.getUser(principal.getName());
+        this.questionService.create(questionForm.getSubject(), questionForm.getContent(), siteUser);
+        return "redirect:/question/list";
     }
 
     @PreAuthorize("isAuthenticated()")
     @GetMapping("/modify/{id}")
     public String questionModify(QuestionForm questionForm, @PathVariable("id") Integer id, Principal principal) {
         Question question = this.questionService.getQuestion(id);
-
-        if (!question.getAuthor().getUsername().equals(principal.getName())) {
+        if(!question.getAuthor().getUsername().equals(principal.getName())) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "수정권한이 없습니다.");
         }
-
         questionForm.setSubject(question.getSubject());
         questionForm.setContent(question.getContent());
-
         return "question_form";
     }
 
@@ -94,30 +77,22 @@ public class QuestionController {
         if (bindingResult.hasErrors()) {
             return "question_form";
         }
-
-        Question question = questionService.getQuestion(id);
-
+        Question question = this.questionService.getQuestion(id);
         if (!question.getAuthor().getUsername().equals(principal.getName())) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "수정권한이 없습니다.");
         }
-
-        questionService.modify(question, questionForm.getSubject(), questionForm.getContent());
-
-        return "redirect:/question/detail/%d".formatted(id);
+        this.questionService.modify(question, questionForm.getSubject(), questionForm.getContent());
+        return String.format("redirect:/question/detail/%s", id);
     }
 
     @PreAuthorize("isAuthenticated()")
     @GetMapping("/delete/{id}")
     public String questionDelete(Principal principal, @PathVariable("id") Integer id) {
         Question question = this.questionService.getQuestion(id);
-
         if (!question.getAuthor().getUsername().equals(principal.getName())) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "삭제권한이 없습니다.");
         }
-
-        questionService.delete(question);
-
+        this.questionService.delete(question);
         return "redirect:/";
     }
-
 }
